<resources>
    <string name="app_name">TTTCollection</string>
    <string name="play">Play</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="rules">Rules</string>
    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>
    <string name="ruleset">Ruleset</string>
    <string name="start">Start</string>
    <string-array name="ruleset_array">
        <item>Classic 2D</item>
        <item>Classic 3D</item>
    </string-array>
    <string name="player1" translatable="false">%1$s</string>
    <string name="player2" translatable="false">%1$s</string>
    <string name="player_won">%1$s won</string>
    <string name="nobody_won">Draw</string>
    <string name="tap_to_restart">Tap board to restart the game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>