<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rulesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruleset"></TextView>

        <Spinner
            android:id="@+id/rulesetSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"></Spinner>

    </LinearLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/versionRuleFragment"
        android:name="com.github.homerayuste.tttcollection.RuleFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_rule" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/sizeRuleFragment"
        android:name="com.github.homerayuste.tttcollection.RuleFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_rule" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView3"
        android:name="com.github.homerayuste.tttcollection.RuleFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_rule" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="center"
        android:paddingHorizontal="50dp"/>

</LinearLayout>